--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="landing-section skew">
     <div class="landing-section unskew">
       <img class="landing-section-image"
-        src="assets/Waseem.png">
+        src="assets/Waseem.jpg">
       <div class="landing-section-content">
         <section class="landing-section-content-header">
           <h4 class="landing-section-hello">Hello,</h4>
@@ -24,25 +24,25 @@
           </h4>
         </section>
         <p class="landing-section-description">
-          Junior computer science student in the University of Texas at Arlington with an interest in design, game development, and frontend development.
+          Senior computer science student in the University of Texas at Arlington with an interest in design, game development, and frontend development.
         </p>
         <ul class="landing-section-button-list">
           <li>
-            <a class="landing-section-button" target="_blank" href="https://www.linkedin.com/in/waseem-alkasbutrus/">
+            <a class="landing-section-button" target="_blank" href="https://www.linkedin.com/in/waseem-polus/">
               <img src="assets/LinkedIn Social Button.svg">
               LinkedIn
             </a>
           </li>
           <li>
-            <a class="landing-section-button" target="_blank" href="https://github.com/Waseem-Alkasbutrus">
+            <a class="landing-section-button" target="_blank" href="https://github.com/waseem-polus">
               <img src="assets/GitHub Social Button Black.svg">
               GitHub
             </a>
           </li>
           <li>
-            <a class="landing-section-button" target="_blank" href="./Resume.pdf">
-              <img src="assets/Document icon.svg">
-              Resume
+            <a class="landing-section-button" target="_blank" href="https://codepen.io/waseem-polus">
+              <img src="assets/Codepen Social Button.svg">
+              CodePen
             </a>
           </li>
         </ul>
@@ -53,78 +53,8 @@
   <section class="skills-section skew">
     <div class="unskew">
       <h3 class="red section-title">My Skills</h3>
-      <section class="flex-container skills-container">
-        <!-- JavaScript -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/JavaScript.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">JavaScript</p>
-          </div>
-        </div>
-
-        <!-- HTML -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/HTML.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">HTML</p>
-          </div>
-        </div>
-
-        <!-- CSS -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/CSS.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">CSS</p>
-          </div>
-        </div>
-
-        <!-- React Native -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/React Native.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">React Native</p>
-          </div>
-        </div>
-
-        <!-- C# -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/CS.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">C#</p>
-          </div>
-        </div>
-
-        <!-- Unity -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/Unity.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">Unity</p>
-          </div>
-        </div>
-
-        <!-- C -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/C.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">C</p>
-          </div>
-        </div>
-
-        <!-- Java -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/Java.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">Java</p>
-          </div>
-        </div>
-
-        <!-- Linux -->
-        <div class="skill-card">
-          <img class="skill-card-image" src="./assets/Linux.svg" />
-          <div class="skill-card-name-holder">
-            <p class="skill-card-name">Linux</p>
-          </div>
-        </div>
+      <section id="skill-section" class="flex-container skills-container">
+        <!-- Skills -->
       </section>
     </div>
   </section>
@@ -132,206 +62,111 @@
   <section class="projects-section skew">
     <div class="unskew">
       <h3 class="black section-title">My Projects</h3>
-      <section class="flex-container projects-container">
-        <!-- Rollability -->
-        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
-          <div class="project-card" style="
-                background-image: url('./assets/project-images/RollAbility.png');
-              ">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">Rollability</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Unity
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      C#
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Entry for GMTK Game Jam 2022. Single-player, 2D plaformer
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
-
-        <!-- CloudCast -->
-        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/CloudCast">
-          <div class="project-card" style="
-                background-image: url('./assets/project-images/CloudCast.png');
-              ">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">CloudCast</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      React Native
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      JS
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Expo
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Real-time global weather app
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
-
-        <!-- Octapoints -->
-        <a class="project-link-container" target="_blank" href="https://github.com/mavs-octagon/Temple">
-          <div class="project-card" style="
-                background-image: url('./assets/project-images/Octapoints.png');
-              ">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">Octapoints</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      React Native
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      JS
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      C
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Decentralized, NFC, attendance-based point-awarding system
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
-
-        <!-- Nexus Light -->
-        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
-          <div class="project-card"
-            style="background-image: url('./assets/project-images/NexusLight.png');">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">Nexus Light</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Unity
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      C#
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Single-player, 2D speedrunning platformer 
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
-
-        <!-- MavPoker -->
-        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/WebPoker">
-          <div class="project-card" style="
-                background-image: url('./assets/project-images/MavPoker.png');
-              ">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">MavPoker</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Java
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      JS
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      HTML
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      CSS
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Web based multiplayer 5-card draw poker game
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
-
-        <!-- JADE -->
-        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
-          <div class="project-card" style="
-                background-image: url('./assets/project-images/JADE.png');
-              ">
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">JADE</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Java
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Java and Donut Express - Desktop coffeeshop logistics management tool
-                </p>
-              </div>
-              <section class="project-card-github">
-                <img src="./assets/GitHub Social Button.svg" />
-              </section>
-            </div>
-          </div>
-        </a>
+      <section id="project-section" class="flex-container projects-container">
+        <!-- Projects -->
       </section>
     </div>
   </section>
-</body>
 
+  <script>
+    const github = "https://github.com/";
+    const skillIconDir = "./assets/";
+    const projectImgDir = "./assets/project-images";
+
+    const mySkills = [
+      { name: "JavaScript"},
+      { name: "HTML"},
+      { name: "CSS"},
+      { name: "React JS", icon: "React"},
+      { name: "React Native", icon: "React"},
+      { name: "C#", icon: "CS"},
+      { name: "PHP"},
+      { name: "MySQL"},
+      { name: "Unity"},
+      { name: "C"},
+      { name: "Java"},
+      { name: "Linux"}
+    ];
+
+    const myProjects = [
+      {
+        github: "Waseem-Alkasbutrus/GMTK-Game-Jam-2022",
+        img: "RollAbility",
+        techStack: ["Unity", "C#"],
+        name: "RollAbility",
+        description: "Entry for GMTK Game Jam 2022. Single-player, 2D plaformer"
+      },
+      {
+        github: "Waseem-Alkasbutrus/CloudCast",
+        img: "CloudCast",
+        techStack: ["React Native", "JS", "Expo"],
+        name: "CloudCast",
+        description: "Real-time global weather app"
+      },
+      {
+        github: "mavs-octagon/Temple",
+        img: "Octapoints",
+        techStack: ["React Native", "JS", "C"],
+        name: "Octapoints",
+        description: "Decentraslized, NFC, attendance-based point-awarding system"
+      },
+      {
+        github: "Waseem-Alkasbutrus/Nexus_Light",
+        img: "NexusLight",
+        techStack: ["Unity", "C#"],
+        name: "Nexus Light",
+        description: "Single-player, 2D speedrunning platformer"
+      },
+      {
+        github: "Waseem-Alkasbutrus/WebPoker",
+        img: "MavPoker",
+        techStack: ["Java", "JS", "HTML", "CSS"],
+        name: "MavPoker",
+        description: "Web based multiplayer 5-card draw poker game"
+      },
+    ];
+
+    const skillSection = document.querySelector("#skill-section");
+    const projectSection = document.querySelector("#project-section");
+
+    mySkills.forEach((skill) => skillSection.innerHTML += `
+      <div class="skill-card">
+        <img class="skill-card-image" src="./assets/${skill.icon? skill.icon : skill.name}.svg" />
+        <div class="skill-card-name-holder">
+          <p class="skill-card-name">${skill.name}</p>
+        </div>
+      </div>
+    `)
+
+    myProjects.forEach((project) => projectSection.innerHTML += `
+      <a class="project-link-container" target="_blank" href="https://github.com/${project.github}">
+        <div class="project-card" style="
+              background-image: url('./assets/project-images/${project.img}.png');
+            ">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">${project.name}</h4>
+                <ul class="project-card-chip-list">
+                  ${project.techStack.map((tech) => `
+                      <li class="project-card-chip">
+                        <span class="project-card-chip-cirle"></span>
+                        ${tech}
+                      </li>
+                    `).join('')}
+                </ul>
+              </div>
+              <p class="prject-card-description">
+                ${project.description}
+              </p>
+            </div>
+            <section class="project-card-github">
+              <img src="./assets/GitHub Social Button.svg" />
+            </section>
+          </div>
+        </div>
+      </a>
+    `)
+  </script>
+</body>
 </html>
